@@ -1,3 +1,7 @@
+Thu Sep  8 22:03:02 EDT 2011	JK Lowden <jklowden@freetds.org>
+	* include/tds.h src/tds/config.c tds_config_verstr accepts "auto"
+	* include/tdsthread.h define mutex macros as 0 for non-thread
+
 Wed Sep  7 11:40:59 CEST 2011    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* include/tds.h src/ctlib/ct.c src/odbc/convert_tds2sql.c:
 	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/sql2tds.c:
@@ -847,4 +851,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3403 2011-09-07 09:40:47 freddy77 Exp $
+$Id: ChangeLog,v 1.3404 2011-09-09 02:06:17 jklowden Exp $
